Changes the default background color to white
It looked slightly better this way, though it's still fugly...

--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -21,6 +21,6 @@
     display: grid;
     grid-template: 1fr / 1fr;
 
-    background-color: $colorWhiteDirty;
+    background-color: $colorWhite;
   }
 }
