--- a/src/layouts/CoreLayout/CoreLayout.scss
+++ b/src/layouts/CoreLayout/CoreLayout.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
 
-  #CoreLayout__Header {
+  #CoreLayoutHeader {
     height: $navBarHeight;
 
     background-color: $colorSecondary;
@@ -17,7 +17,7 @@
   #NavBar {
   }
 
-  #CoreLayout__Content {
+  #CoreLayoutContent {
     display: grid;
     grid-template: 1fr / 1fr;
 
